added a new photo of group 75

--- a/index.html
+++ b/index.html
@@ -1,12 +1,103 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hurrah</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
-    
+    <header class="merriweather-regular">
+        <h3 class="common-h3 white">Happy New Year</h3>
+        <h1 class="common-h1 white">
+            New Year Party <br />
+            Celebration
+        </h1>
+    </header>
+    <main>
+        <!-- discount section -->
+        <section class="discount-section">
+            <h1 class="common-h1 red inter-regular">65% OFF</h1>
+            <h6 class="common-h6 red inter-regular">
+                OUR HOLIDAYS DEALS ARE BETTER
+            </h6>
+            <h3 class="common-h3 inter-regular">ALL CATEGORIES</h3>
+            <img src="images/New Year Photo.png" alt="happy new year" class="new-year-img" />
+        </section>
+        <!-- welcome section -->
+        <section class="welcome-section">
+            <div>
+                <h1 class="common-h1 white merriweather-regular">
+                    Welcome to <br />
+                    midnight party
+                </h1>
+                <p class="white normal-text">
+                    Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+                    molestie malesuada. Ipsum sed sodales risus ut pellentesque vel
+                    euismod.
+                </p>
+                <a href="#" class="links">Join Now</a>
+            </div>
+            <img src="images/Group 70.png" alt="" class="new-year-number-img" />
+        </section>
+        <!-- location section -->
+        <section class="location-section">
+            <h4 class="common-h4 inter-regular">
+                <span class="red">Place: </span>New Park Hotel
+            </h4>
+            <h4 class="common-h4 inter-regular">
+                <span class="red">Date: </span>31 December Night 2024
+            </h4>
+            <h4 class="common-h4 inter-regular">
+                <span class="red">Time: </span>Evening 7.30 pm to 1.30 am
+            </h4>
+            <a href="" class="links"><button class="btn">Join Now</button></a>
+        </section>
+        <!-- comming soon section -->
+        <section class="comming-soon-section">
+            <div class="child">
+                <h4 class="common-h4 red inter-regular">NEW BEST OFFER</h4>
+                <h2 class="common-h3 merriweather-regular">Coming Soon</h2>
+                <p class="normal-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt fugit
+                    cupiditate porro fugiat vel? Ex, quaerat. Aspernatur possimus expedita ipsam eligendi deleniti dolor
+                    aut asperiores praesentium aperiam assumenda deserunt harum odit quo voluptate tempore magni labore
+                    esse ex, facilis quam accusantium corporis voluptates? Molestiae mollitia exercitationem repellat
+                    corrupti ea! Voluptatem.</p>
+            </div>
+            <div class="child">
+                <img src="images/Ellipse 1.png" alt="friends" class="friends-img">
+            </div>
+            <div class="child">
+                <h3 class="common-h3 red">2024</h3>
+                <p class="normal-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex libero magni saepe
+                    repellat atque quia fugit repellendus laborum vitae, possimus inventore autem tempore, nesciunt
+                    nobis error, eaque nostrum quae magnam quo iste pariatur dolor sapiente dolorem non! Veniam, nulla
+                    doloribus.</p>
+                <img src="images/Group 96.png" alt="surprise gift">
+            </div>
+        </section>
+        <!-- holidays section -->
+        <section class="holidays-section">
+            <div class="first">
+                <h4 class="common-h4 inter-regular">WHAT IS FUNCTIONAL</h4>
+                <h1 class="common-h1 merriweather-regular">
+                    <span class="red">Holidays </span>
+                    Sale 50%
+                </h1>
+                <p class="normal-text">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+                    molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. Eleifend nunc purus quam id
+                    fermentum amet amet sit consectetur.
+                </p>
+            </div>
+            <div class="second">
+                <img src="images/Group 75." alt="surprise gift box">
+                <img src="images/Group 44.png" alt="" class="discount-img">
+            </div>
+        </section>
+    </main>
+    <footer></footer>
 </body>
+
 </html>
