added a gift svg

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 </p>
             </div>
             <div class="second">
-                <img src="images/Group 75." alt="surprise gift box">
+                <img src="images/Group_75-removebg-preview.png" alt="surprise gift box">
                 <img src="images/Group 44.png" alt="" class="discount-img">
             </div>
         </section>
