new year website V1.0.0 by Pujan Chakma

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hurrah</title>
+    <script src="https://kit.fontawesome.com/f8ee48c0d5.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css" />
 </head>
 
@@ -92,12 +93,77 @@
                 </p>
             </div>
             <div class="second">
-                <img src="images/Group_75-removebg-preview.png" alt="surprise gift box">
+                <img src="images/gift.svg" alt="surprise gift box">
                 <img src="images/Group 44.png" alt="" class="discount-img">
             </div>
         </section>
+        <!-- gift section -->
+        <section class="gift-section">
+            <div class="about-gift">
+                <h4 class="common-h4 red inter-regular">THE BEST GIFT</h4>
+                <h2 class="common-h3 merriweather-regular">Our Awesome Portfolio</h2>
+                <p class="normal-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo fuga quis
+                    temporibus laboriosam facilis molestiae aut, ipsam cupiditate mollitia sint optio, error sapiente
+                    nemo laborum. Iusto quis doloribus odio ex.</p>
+            </div>
+            <!-- images for gift starts -->
+            <div class="gift-grid">
+                <div class="photos-row">
+                    <img src="images/Rectangle 3.png" alt="gift" class="img-gift">
+                    <img src="images/Rectangle 4.png" alt="gift" class="img-gift">
+                    <img src="images/Rectangle 5.png" alt="gift" class="img-gift">
+                </div>
+                <div class="photos-row">
+                    <img src="images/Rectangle 6.png" alt="gift" class="img-gift">
+                    <img src="images/Rectangle 7.png" alt="gift" class="img-gift">
+                    <img src="images/Rectangle 8.png" alt="gift" class="img-gift">
+                </div>
+            </div>
+            <!-- images for gifts ends -->
+        </section>
+        <!-- newsletter section -->
+        <section class="newsletter-section">
+            <img src="images/Group 61.png" alt="email icon" class="email-icon">
+            <h2 class="common-h2 merriweather-regular">Subscribe Newsletter</h2>
+            <p class="normal-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex libero mag Lorem ipsum
+                dolor, sit amet consectetur adipisicing elit. Nostrum a quaerat mollitia dolorem deserunt enim fugiat
+                odit, laudantium illo modi.
+            </p>
+            <form action="" class="subscribe-form">
+                <input type="email" name="email" id="input-email" placeholder="Enter your email">
+                <button type="submit" id="subscribe-btn">Subscribe</button>
+            </form>
+        </section>
     </main>
-    <footer></footer>
+    <!-- main ends here -->
+    <footer>
+        <!-- links are given here -->
+        <div class="footer-div merriweather-regular">
+            <div>
+                44, Big Building Roosevelt Street
+                <br>
+                Beach Gardens Florida 33410
+            </div>
+            <div>
+                <i class="fa-duotone fa-phone-volume"></i> +8801647119298 <br>
+                <i class="fa-regular fa-globe"></i> www.pujanchakma.com
+            </div>
+        </div>
+        <hr>
+        <!-- links section ends here -->
+        <div class="footer-div-social">
+            <a href="http://www.facebook.com"><img src="icons/Facebook.png" alt="facebook" class="social-icons"></a>
+            <a href="http://www.twitter.com"><img src="icons/Twitter.png" alt="twitter" class="social-icons"></a>
+            <a href="http://www.instagram.com"><img src="icons/Instagram.png" alt="instagram" class="social-icons"></a>
+            <a href="http://www.linkedin.com"><img src="icons/Linkedin.png" alt="linkedin" class="social-icons"></a>
+        </div>
+        <hr>
+        <!-- social icons ends here -->
+        <div class="footer-div-last">
+            <p class="normal-text white inter-regular">2024, All rights reserved</p>
+            <a href="#" class="inter-regular">Unsubscribe</a>
+        </div>
+    </footer>
 </body>
 
 </html>
