--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hurrah</title>
     <script src="https://kit.fontawesome.com/f8ee48c0d5.js" crossorigin="anonymous"></script>
+    <link rel="shortcut icon" href="icons/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css" />
 </head>
 
